# 0.00.18 (42860) Aug 9, 2010
8/9/10 dev version to demonstrate additional changes to pH paper
8/8/10 decided on a color key (delete ContinousColorKeyNode, rename DiscreteColorKeyNode to PHColorKeyNode)
8/8/10 change pH color from strategy pattern to factory pattern
8/8/10 add pH paper to Custom Solution tab
8/8/10 remove color animation from PHPaper
8/8/10 make SolutionRepresentation handle notification of concentration and strength changes
8/9/10 use pH=7 for color of undipped pH paper
8/9/10 reduce pH paper width by half (60 to 30)
8/9/10 align baselines in reaction equations
# 0.00.17 (42853) Aug 9, 2010
8/9/10 dev version to demonstrate revised pH paper
8/6/10 generalize ChemicalSymbolNode (from advanced-acid-base-solutions) for aligning baselines of symbols in equations
8/6/10 display nothing instead of "_ _ _" when pH meter is out of solution
8/6/10 do a linear interpolation between pH colors
8/6/10 alternative color key that shows discrete color "chips" for each integer pH value
8/6/10 pH color strategy that uses specific colors for each integer pH value
8/6/10 use strategy pattern for creating pH colors, until we decide which approach is best
8/6/10 disable color animation for pH paper (see PHPaper.ANIMATE_COLOR)
# 0.00.16 (42834) Aug 4, 2010
8/4/10 demonstrate first pass at pH paper
8/4/10 placeholder for conductivity tester visual representation
8/4/10 invert mapping of pH to wavelength, acids should be red-orange, bases should be green-blue
8/4/10 bug fix, pH paper didn't change to correct color if solution was changed while paper is not dipped
8/4/10 pH color key
8/3/10 add listener for pH paper "dipped height" property
8/3/10 clean up listener stuff in PHPaper
8/3/10 added interpolation between colors for the PhPaper
8/3/10 store the dipped height for when the ph paper is removed from the water
8/4/10 added placeholder node for pH paper color key, visible when pH paper is visible
8/4/10 constants for min/max pH
8/3/10 second pass at pH paper